[gd_scene load_steps=7 format=3 uid="uid://bccr0o5q8pi4w"]

[ext_resource type="Script" uid="uid://ce6jmfaboirdf" path="res://Scripts/insertar_datos.gd" id="1_dnimb"]
[ext_resource type="PackedScene" uid="uid://shuyqn7utcag" path="res://Nodes/exit_button.tscn" id="2_fmfti"]
[ext_resource type="Theme" uid="uid://bd7dkov8bqa4h" path="res://Styles/Theme_Main.tres" id="2_wt222"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wt222"]

[sub_resource type="LabelSettings" id="LabelSettings_wt222"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_fmfti"]

[node name="InsertarDatos" type="Node2D"]
script = ExtResource("1_dnimb")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 576.0
offset_bottom = 1024.0

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0532867, 0.03566161, 0.06027004, 1)

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -288.0
offset_top = -512.0
offset_right = 288.0
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wt222")

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 48

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Datos de Transferencia"
label_settings = SubResource("LabelSettings_wt222")
horizontal_alignment = 1

[node name="Label" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Ingresa Nombre"
label_settings = SubResource("LabelSettings_fmfti")

[node name="NameLine" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
placeholder_text = "Ramses"

[node name="Label2" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Ingresa CLABE"
label_settings = SubResource("LabelSettings_fmfti")

[node name="CLABELine" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
placeholder_text = "CLABE"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Banco de Transferencia"
label_settings = SubResource("LabelSettings_fmfti")

[node name="AccountOption" type="OptionButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 6
popup/item_0/text = "NU MEXICO"
popup/item_0/id = 0
popup/item_1/text = "Mercado Pago W"
popup/item_1/id = 1
popup/item_2/text = "SCOTIABANK"
popup/item_2/id = 2
popup/item_3/text = "BANAMEX"
popup/item_3/id = 3
popup/item_4/text = "BANCOPPEL"
popup/item_4/id = 4
popup/item_5/text = "BBVA MEXICO"
popup/item_5/id = 5

[node name="Label4" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Ingresa Cantidad"
label_settings = SubResource("LabelSettings_fmfti")

[node name="MoneyLine" type="LineEdit" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
placeholder_text = "5000"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label5" type="Label" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_wt222")
text = "Selecciona la UI Transferencia"
label_settings = SubResource("LabelSettings_fmfti")

[node name="UIBankOption" type="OptionButton" parent="Control/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
selected = 0
item_count = 2
popup/item_0/text = "NU_MEXICO"
popup/item_0/id = 0
popup/item_1/text = "Mercado_Pago"
popup/item_1/id = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 72
theme_override_constants/margin_right = 72

[node name="Enviar" type="Button" parent="Control/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_wt222")
text = "Crear Transferencia"

[node name="Exit" parent="Control" instance=ExtResource("2_fmfti")]
layout_mode = 1
offset_left = 0.0
offset_top = 423.99997
offset_right = 0.0
offset_bottom = 423.99997
scale = Vector2(1.25, 1.25)
scene_name = "home"
